# gibblox

./: .gitmodules  AGENTS.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  issue-bump.yml  next-rc-on-merge.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/gibblox-android-sparse/: Cargo.toml
crates/gibblox-android-sparse/src/: lib.rs
crates/gibblox-blockreader-messageport/: Cargo.toml
crates/gibblox-blockreader-messageport/src/: lib.rs
crates/gibblox-cache/: Cargo.toml
crates/gibblox-cache-store-idb/: Cargo.toml
crates/gibblox-cache-store-idb/src/: lib.rs  wasm.rs
crates/gibblox-cache-store-opfs/: Cargo.toml
crates/gibblox-cache-store-opfs/src/: lib.rs  wasm.rs
crates/gibblox-cache-store-std/: Cargo.toml
crates/gibblox-cache-store-std/src/: lib.rs
crates/gibblox-cache/src/: greedy.rs  lib.rs
crates/gibblox-cache/tests/: cache.rs
crates/gibblox-casync/: Cargo.toml
crates/gibblox-casync-std/: Cargo.toml
crates/gibblox-casync-std/src/: lib.rs
crates/gibblox-casync-web/: Cargo.toml
crates/gibblox-casync-web/src/: lib.rs
crates/gibblox-casync/src/: index.rs  lib.rs  reader.rs
crates/gibblox-core/: Cargo.toml
crates/gibblox-core/src/: aligned_block.rs  block_byte.rs  byte_range.rs  erofs.rs  gpt.rs  lib.rs  lru.rs  offset_byte.rs  paged.rs  window_block.rs
crates/gibblox-ext4/: Cargo.toml
crates/gibblox-ext4/src/: lib.rs
crates/gibblox-fat/: Cargo.toml
crates/gibblox-fat/src/: lib.rs
crates/gibblox-file/: Cargo.toml
crates/gibblox-file/src/: lib.rs
crates/gibblox-http/: Cargo.toml
crates/gibblox-http/src/: lib.rs  native.rs  wasm.rs
crates/gibblox-http/tests/: http.rs
crates/gibblox-iso9660/: Cargo.toml
crates/gibblox-iso9660/src/: lib.rs
crates/gibblox-mbr/: Cargo.toml
crates/gibblox-mbr/src/: lib.rs
crates/gibblox-optimizer/: Cargo.toml
crates/gibblox-optimizer/src/: lib.rs
crates/gibblox-paged-lru/: Cargo.toml
crates/gibblox-paged-lru/src/: lib.rs
crates/gibblox-pipeline/: Cargo.toml
crates/gibblox-pipeline/src/: bin.rs  lib.rs  materialize_common.rs  materialize_std.rs  materialize_web.rs  optimize_std.rs
crates/gibblox-schema/: Cargo.toml
crates/gibblox-schema/src/: bin.rs  lib.rs
crates/gibblox-tar/: Cargo.toml
crates/gibblox-tar/src/: lib.rs
crates/gibblox-web-file/: Cargo.toml
crates/gibblox-web-file/src/: lib.rs
crates/gibblox-web-worker/: Cargo.toml
crates/gibblox-web-worker/src/: lib.rs
crates/gibblox-xz/: Cargo.toml
crates/gibblox-xz/src/: lib.rs
crates/gibblox-zip/: Cargo.toml
crates/gibblox-zip/src/: lib.rs
crates/gibblox-zip/src/zip/: archive.rs  bytes.rs  mod.rs  records.rs
crates/gobblytes-core/: Cargo.toml
crates/gobblytes-core/src/: lib.rs
crates/gobblytes-erofs/: Cargo.toml
crates/gobblytes-erofs/src/: lib.rs
crates/gobblytes-fat/: Cargo.toml
crates/gobblytes-fat/src/: lib.rs
docs/: pipelines.md
docs/plans/: identity.md  pipeline.md  web-worker.md
erofs/: Cargo.toml
erofs-cli/src/: inspect.rs  main.rs
erofs-rs/: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
erofs-rs/erofs/: Cargo.toml
erofs-rs/erofs-cli/: Cargo.toml
erofs-rs/erofs-cli/src/: convert.rs  dump.rs  inspect.rs
erofs-rs/erofs/src/: dirent.rs  error.rs  file.rs  filesystem.rs  image.rs  lib.rs  types.rs  walkdir.rs
erofs/src/: dirent.rs  error.rs  file.rs  filesystem.rs  lib.rs  read.rs  traits.rs  types.rs  walkdir.rs
examples/: erofs_cat.rs
examples/cache-visualizer/: Cargo.toml  README.md  index.html
examples/cache-visualizer/src/: lib.rs
examples/pipeline-pump-web/: Cargo.toml  README.md  index.html  worker.js
examples/pipeline-pump-web/examples/: browser-pump.rs
examples/pipeline-pump-web/src/: lib.rs
ext4-view-rs/: .gitattributes  Cargo.toml
ext4-view-rs/src/: block_cache.rs  dir_htree.rs  lib.rs  reader.rs
ext4-view-rs/src/journal/: superblock.rs
ext4-view-rs/xtask/: Cargo.toml
ext4-view-rs/xtask/uefibench/: Cargo.toml
infra/k8s/flux-system/: gibblox.yaml  kustomization.yaml
infra/tofu/: README.md
plans/: pipeline-acceleration-hints.md  web-worker.md
