[workspace]
resolver = "2"
members = [
    "crates/gibblox-core",
    "crates/gibblox-iso9660",
    "crates/gibblox-file",
    "crates/gibblox-http",
    "crates/gibblox-cache",
    "crates/gibblox-paged-lru",
    "crates/gibblox-cache-store-std",
    "crates/gibblox-cache-store-opfs",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.87"
license = "GPL-3.0-only"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"

[workspace.dependencies]
bitflags = "2"
bytes = { version = "1", default-features = false }
memmap2 = { version = "0.9", default-features = false }
rustix = { version = "1", default-features = false }
