[workspace]
resolver = "2"
members = [
    "crates/gibblox-core",
    "crates/gibblox-android-sparse",
    "crates/gibblox-zip",
    "crates/gibblox-casync",
    "crates/gibblox-casync-std",
    "crates/gibblox-casync-web",
    "crates/gibblox-iso9660",
    "crates/gibblox-file",
    "crates/gibblox-http",
    "crates/gibblox-cache",
    "crates/gibblox-cache-store-std",
    "crates/gibblox-cache-store-opfs",
    "crates/gibblox-blockreader-messageport",
    "crates/gibblox-web-worker",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.87"
license = "GPL-3.0-only"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"

[workspace.dependencies]
async-trait = "0.1.89"
bitflags = "2"
bytes = { version = "1", default-features = false }
memmap2 = { version = "0.9", default-features = false }
rustix = { version = "1", default-features = false }
tokio = "1.49.0"
url = "2.5.8"
futures-util = { version = "0.3.31", default-features = false }
futures = { version = "0.3.31", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
