[workspace]
resolver = "2"
members = [
    "crates/gobblytes-core",
    "crates/gobblytes-erofs",
    "crates/gobblytes-fat",
    "crates/gibblox-core",
    "crates/gibblox-android-sparse",
    "crates/gibblox-zip",
    "crates/gibblox-xz",
    "crates/gibblox-casync",
    "crates/gibblox-casync-std",
    "crates/gibblox-casync-web",
    "crates/gibblox-iso9660",
    "crates/gibblox-mbr",
    "crates/gibblox-ext4",
    "crates/gibblox-file",
    "crates/gibblox-web-file",
    "crates/gibblox-http",
    "crates/gibblox-cache",
    "crates/gibblox-cache-store-std",
    "crates/gibblox-cache-store-opfs",
    "crates/gibblox-blockreader-messageport",
    "crates/gibblox-web-worker",
]

[workspace.package]
version = "0.0.1-rc.2"
edition = "2024"
rust-version = "1.87"
license = "GPL-3.0-only"
repository = "https://github.com/samcday/gibblox"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"

[workspace.dependencies]
gobblytes-core = { version = "0.0.1-rc.2", path = "crates/gobblytes-core" }
gobblytes-erofs = { version = "0.0.1-rc.2", path = "crates/gobblytes-erofs" }
gobblytes-fat = { version = "0.0.1-rc.2", path = "crates/gobblytes-fat" }
gibblox-core = { version = "0.0.1-rc.2", path = "crates/gibblox-core" }
gibblox-android-sparse = { version = "0.0.1-rc.2", path = "crates/gibblox-android-sparse" }
gibblox-zip = { version = "0.0.1-rc.2", path = "crates/gibblox-zip" }
gibblox-xz = { version = "0.0.1-rc.2", path = "crates/gibblox-xz" }
gibblox-casync = { version = "0.0.1-rc.2", path = "crates/gibblox-casync" }
gibblox-casync-std = { version = "0.0.1-rc.2", path = "crates/gibblox-casync-std" }
gibblox-casync-web = { version = "0.0.1-rc.2", path = "crates/gibblox-casync-web" }
gibblox-iso9660 = { version = "0.0.1-rc.2", path = "crates/gibblox-iso9660" }
gibblox-mbr = { version = "0.0.1-rc.2", path = "crates/gibblox-mbr" }
gibblox-ext4 = { version = "0.0.1-rc.2", path = "crates/gibblox-ext4" }
gibblox-file = { version = "0.0.1-rc.2", path = "crates/gibblox-file" }
gibblox-web-file = { version = "0.0.1-rc.2", path = "crates/gibblox-web-file" }
gibblox-http = { version = "0.0.1-rc.2", path = "crates/gibblox-http" }
gibblox-cache = { version = "0.0.1-rc.2", path = "crates/gibblox-cache", default-features = false }
gibblox-cache-store-std = { version = "0.0.1-rc.2", path = "crates/gibblox-cache-store-std" }
gibblox-cache-store-opfs = { version = "0.0.1-rc.2", path = "crates/gibblox-cache-store-opfs" }
gibblox-blockreader-messageport = { version = "0.0.1-rc.2", path = "crates/gibblox-blockreader-messageport" }
gibblox-web-worker = { version = "0.0.1-rc.2", path = "crates/gibblox-web-worker" }
async-trait = "0.1.89"
bitflags = "2"
bytes = { version = "1", default-features = false }
memmap2 = { version = "0.9", default-features = false }
rustix = { version = "1", default-features = false }
tokio = "1.49.0"
url = "2.5.8"
futures-util = { version = "0.3.31", default-features = false }
futures = { version = "0.3.31", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
flate2 = { version = "1.1.5", default-features = false }
lzma-rs = "0.3.0"
ruzstd = "0.8.2"
reqwest = { version = "0.12.28", default-features = false }
js-sys = "0.3.82"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = "0.3.82"
erofs-rs = { package = "gobblytes-erofs-rs", version = "0.1.1", path = "erofs-rs/erofs", default-features = false }
ext4-view = { package = "gobblytes-ext4-view-rs", version = "0.9.3", path = "ext4-view-rs", default-features = false }
