[package]
name = "gibblox-cli"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "CLI for reading and composing gibblox block pipelines."

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.32", features = ["derive"] }
gibblox-core = { workspace = true, features = ["std"] }
gibblox-pipeline = { workspace = true, features = ["std"] }
serde_yaml = "0.9.34"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
