[package]
name = "gibblox-android-sparse"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = []
std = ["gibblox-core/std"]

[dependencies]
async-trait = { workspace = true }
gibblox-core = { workspace = true }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }

[dev-dependencies]
futures = { workspace = true, features = ["executor"] }
