[package]
name = "gibblox-blockreader-messageport"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
async-trait = { workspace = true }
futures-channel = "0.3.31"
gibblox-core = { path = "../gibblox-core", default-features = false }
tracing = "0.1.41"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Event", "MessageEvent", "MessagePort"] }
