[package]
name = "gibblox-cache-store-opfs"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
async-trait = { workspace = true }
futures-channel = "0.3.31"
gibblox-cache = { path = "../gibblox-cache", default-features = false }
gibblox-core = { path = "../gibblox-core", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["FileSystemDirectoryHandle", "FileSystemFileHandle", "FileSystemGetDirectoryOptions", "FileSystemGetFileOptions", "FileSystemReadWriteOptions", "FileSystemSyncAccessHandle", "StorageManager", "WorkerGlobalScope", "WorkerNavigator"] }
