[package]
name = "gibblox-cache-store-opfs"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "OPFS-backed cache store for web runtimes."
keywords = ["gibblox"]

[dependencies]
async-trait = { workspace = true }
futures-channel = "0.3.31"
gibblox-cache = { workspace = true }
gibblox-core = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["FileSystemDirectoryHandle", "FileSystemFileHandle", "FileSystemGetDirectoryOptions", "FileSystemGetFileOptions", "FileSystemReadWriteOptions", "FileSystemSyncAccessHandle", "StorageManager", "WorkerGlobalScope", "WorkerNavigator"] }
