[package]
name = "gibblox-cache-store-std"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
async-trait = { workspace = true }
gibblox-cache = { path = "../gibblox-cache", default-features = false }
gibblox-core = { path = "../gibblox-core", default-features = false }
tracing = "0.1"
