[package]
name = "gibblox-cache-store-std"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
async-trait = { workspace = true }
gibblox-cache = { workspace = true, features = ["std"] }
gibblox-core = { workspace = true }
tracing = "0.1"
