[package]
name = "gibblox-cache-store-std"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Filesystem-backed cache store with XDG-friendly defaults."
keywords = ["gibblox"]

[dependencies]
async-trait = { workspace = true }
gibblox-cache = { workspace = true, features = ["std"] }
gibblox-core = { workspace = true }
tracing = "0.1"
