[package]
name = "gibblox-cache"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[features]
default = []
std = []

[dependencies]
async-trait = "0.1.89"
futures-channel = { version = "0.3.31", default-features = false, features = ["alloc"] }
gibblox-core = { path = "../gibblox-core", default-features = false }
