[package]
name = "gibblox-cache"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[features]
default = ["std"]
std = ["futures-channel/std"]

[dependencies]
async-lock = "3.3"
async-trait = { workspace = true }
futures-channel = { version = "0.3.31", default-features = false, features = ["alloc"] }
futures-util = { workspace = true, features = ["alloc"] }
gibblox-core = { path = "../gibblox-core", default-features = false }
tracing = { version = "0.1.41", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
