[package]
name = "gibblox-casync-std"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
async-trait = { workspace = true }
flate2 = { version = "1.1.5", default-features = false, features = ["rust_backend"] }
gibblox-casync = { path = "../gibblox-casync" }
gibblox-core = { path = "../gibblox-core", features = ["std"] }
lzma-rs = "0.3.0"
reqwest = { version = "0.12.28", default-features = false, features = ["http2", "rustls-tls"] }
ruzstd = "0.8.2"
tokio = { version = "1.49.0", features = ["fs", "sync"] }
tracing = "0.1.41"
url = "2.5.8"

[dev-dependencies]
sha2 = { version = "0.10.9", default-features = false }
tempfile = "3.23.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
