[package]
name = "gibblox-casync-std"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
async-trait = { workspace = true }
flate2 = { workspace = true, features = ["rust_backend"] }
gibblox-casync = { path = "../gibblox-casync" }
gibblox-core = { path = "../gibblox-core", features = ["std"] }
lzma-rs = { workspace = true }
reqwest = { workspace = true, features = ["http2", "rustls-tls"] }
ruzstd = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync"] }
tracing = "0.1.41"
url = { workspace = true }

[dev-dependencies]
sha2 = { workspace = true }
tempfile = "3.23.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
