[package]
name = "gibblox-casync-web"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
gibblox-casync = { path = "../gibblox-casync" }
gibblox-core = { path = "../gibblox-core", default-features = false }
tracing = "0.1.41"
url = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
async-trait = { workspace = true }
flate2 = { version = "1.1.5", default-features = false, features = ["rust_backend"] }
js-sys = "0.3.82"
lzma-rs = "0.3.0"
ruzstd = "0.8.2"
wasm-bindgen = "0.2.105"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features = [
    "Cache",
    "CacheStorage",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
    "WorkerGlobalScope",
] }
