[package]
name = "gibblox-casync"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[features]
default = []
std = ["gibblox-core/std"]

[dependencies]
async-trait = { workspace = true }
gibblox-core = { path = "../gibblox-core", default-features = false }
sha2 = { workspace = true }
tracing = { version = "0.1.41", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
