[package]
name = "gibblox-casync"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "casync index parsing and reconstruction core."
keywords = ["gibblox"]

[features]
default = []
std = ["gibblox-core/std"]

[dependencies]
async-trait = { workspace = true }
gibblox-core = { workspace = true }
sha2 = { workspace = true }
tracing = { version = "0.1.41", default-features = false }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
