[package]
name = "gibblox-core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[features]
default = []
std = []

[dependencies]
async-lock = { version = "3.4", default-features = false }
async-trait = { workspace = true }
erofs-rs = { path = "../../erofs-rs/erofs", default-features = false }
futures-channel = { version = "0.3.31", default-features = false, features = ["alloc"] }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }

[dev-dependencies]
futures = { workspace = true, features = ["executor"] }
gibblox-cache = { path = "../gibblox-cache" }
gibblox-cache-store-std = { path = "../gibblox-cache-store-std" }
gibblox-file = { path = "../gibblox-file" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[[example]]
name = "erofs_cat"
required-features = ["std"]
path = "../../examples/erofs_cat.rs"
