[package]
name = "gibblox-core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[features]
default = []
std = []

[dependencies]
async-lock = { version = "3.4", default-features = false }
async-trait = { workspace = true }
futures-channel = { version = "0.3.31", default-features = false, features = ["alloc"] }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }

[dev-dependencies]
futures = { workspace = true, features = ["executor"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
