[package]
name = "gibblox-ext4"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
async-trait = "0.1.89"
ext4-view = { path = "../../ext4-view-rs", default-features = false, features = ["async"] }
futures-channel = "0.3.31"
gibblox-core = { path = "../gibblox-core" }
tokio = { workspace = true, features = ["rt", "time", "net", "io-util"] }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
