[package]
name = "gibblox-ext4"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "ext4 filesystem adapter and ext4 file-backed block reader."

[dependencies]
async-trait = "0.1.89"
ext4-view = { workspace = true, features = ["async"] }
gibblox-core = { workspace = true }
pollster = "0.4.0"
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
