[package]
name = "gibblox-ext4"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "ext4 filesystem adapter and ext4 file-backed block reader."
keywords = ["gibblox"]

[dependencies]
async-trait = "0.1.89"
ext4plus = { workspace = true }
gibblox-core = { workspace = true }
gobblytes-core = { workspace = true }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
