[package]
name = "gibblox-file"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Block reader backed by local files."
keywords = ["gibblox"]

[dependencies]
async-trait = { workspace = true }
gibblox-core = { workspace = true, features = ["std"] }
tracing = "0.1.41"
