[package]
name = "gibblox-http"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[features]
default = ["native-client"]
native-client = ["reqwest", "tokio"]
wasm-client = ["wasm-bindgen-futures", "web-sys", "js-sys", "wasm-bindgen", "futures-util"]

[dependencies]
async-trait = { workspace = true }
thiserror = "1.0.69"
http = "1.1.0"
gibblox-core = { path = "../gibblox-core" }
tracing = "0.1.41"
url = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { workspace = true, features = ["http2", "json", "rustls-tls", "stream"], optional = true }
tokio = { workspace = true, features = ["rt", "net", "time"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
futures-util = { workspace = true, features = ["std"], optional = true }
web-sys = { version = "0.3.72", optional = true, features = [
    "Window",
    "WorkerGlobalScope",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "ReadableStream",
    "ReadableStreamDefaultReader",
    "AbortSignal",
] }

[dev-dependencies]
bytes = "1.10.1"
http-body-util = "0.1.3"
hyper = { version = "1.4.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }
