[package]
name = "gibblox-iso9660"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Block reader for ISO9660 file contents."
keywords = ["gibblox"]

[features]
default = []
std = []

[dependencies]
async-trait = { workspace = true }
gibblox-core = { workspace = true }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }

[dev-dependencies]
futures = { workspace = true, features = ["executor"] }
