[package]
name = "gibblox-mbr"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[features]
default = []
std = []

[dependencies]
async-trait = "0.1.89"
bytemuck = { version = "1.24.0", default-features = false }
gibblox-core = { path = "../gibblox-core" }
hadris-part = { version = "1.0.1", default-features = false }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }

[dev-dependencies]
futures = { version = "0.3.31", default-features = false, features = ["executor"] }
