[package]
name = "gibblox-pipeline"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Pipeline descriptor types and codec helpers for gibblox."

[features]
default = []
std = ["serde/std"]

[dependencies]
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.217", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
serde_yaml = "0.9.34"
