[package]
name = "gibblox-schema"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Schema types and binary framing for gibblox sidecar artifacts."

[features]
default = []
std = ["serde/std"]

[dependencies]
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.217", default-features = false, features = ["derive", "alloc"] }
