[package]
name = "gibblox-web-file"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[features]
default = ["std"]
std = ["gibblox-core/std"]

[dependencies]
async-trait = "0.1.89"
gibblox-core = { path = "../gibblox-core", default-features = false }
tracing = { version = "0.1.41", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.82"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.82", features = ["Blob", "File"] }
