[package]
name = "gibblox-web-worker"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
gibblox-core = { path = "../gibblox-core", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-channel = "0.3.31"
futures-util = { workspace = true, features = ["alloc", "async-await"] }
gibblox-blockreader-messageport = { path = "../gibblox-blockreader-messageport" }
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = { workspace = true }
tracing = "0.1.41"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["DedicatedWorkerGlobalScope", "Event", "MessageChannel", "MessageEvent", "MessagePort", "Worker"] }
