[package]
name = "gibblox-web-worker"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Worker helpers for serving BlockReader over MessagePort."
keywords = ["gibblox"]

[dependencies]
gibblox-core = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-channel = "0.3.31"
futures-util = { workspace = true, features = ["alloc", "async-await"] }
gibblox-blockreader-messageport = { workspace = true }
gloo-timers = { version = "0.3.0", features = ["futures"] }
js-sys = { workspace = true }
tracing = "0.1.41"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["DedicatedWorkerGlobalScope", "Event", "MessageChannel", "MessageEvent", "MessagePort", "Worker"] }
